--- a/SistemaChamadosFiap.Web/Web.config
+++ b/SistemaChamadosFiap.Web/Web.config
@@ -16,9 +16,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="SistemaChamadosFiapEntities" connectionString="metadata=res://*/SistemaChamadosFiap.csdl|res://*/SistemaChamadosFiap.ssdl|res://*/SistemaChamadosFiap.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=SistemaChamadosFiap;persist security info=True;user id=sa;password=esnan@1504;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SistemaChamadosFiapEntities" connectionString="metadata=res://*/SistemaChamadosFiap.csdl|res://*/SistemaChamadosFiapEntities.ssdl|res://*/SistemaChamadosFiap.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=SistemaChamadosFiap;persist security info=True;user id=sa;password=esnan@1504;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+    <add name="DefaultConnection" connectionString="Integrated Security=True;Persist Security Info=False;Initial Catalog=SistemaChamadosFiapEntities;Data Source=(LocalDb)\MSSQLLocalDB" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <system.web>
+    <globalization uiCulture="pt-BR" culture="pt-BR" />
+    <authentication mode="None"></authentication>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <pages>
@@ -74,6 +79,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
