--- a/SistemaChamadosFiap.Web/Web.config
+++ b/SistemaChamadosFiap.Web/Web.config
@@ -16,7 +16,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="SistemaChamadosFiapEntities" connectionString="metadata=res://*/SistemaChamadosFiap.csdl|res://*/SistemaChamadosFiapEntities.ssdl|res://*/SistemaChamadosFiap.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=SistemaChamadosFiap;persist security info=True;user id=sa;password=esnan@1504;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+    <add name="SistemaChamadosFiapEntities" connectionString="metadata=res://*/SistemaChamadosFiap.csdl|res://*/SistemaChamadosFiap.ssdl|res://*/SistemaChamadosFiap.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=SistemaChamadosFiap;persist security info=True;user id=sa;password=esnan@1504;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
     <add name="DefaultConnection" connectionString="Integrated Security=True;Persist Security Info=False;Initial Catalog=SistemaChamadosFiap;Data Source=(LocalDb)\MSSQLLocalDB" providerName="System.Data.SqlClient" />
 
@@ -58,7 +59,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
