--- a/SistemaChamadosFiap.Web/Views/web.config
+++ b/SistemaChamadosFiap.Web/Views/web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
   <configSections>
@@ -18,6 +18,11 @@
         <add namespace="System.Web.Routing" />
         <add namespace="SistemaChamadosFiap.Web" />
         <add namespace="SistemaChamadosFiap.Data" />
+        <add namespace="SistemaChamadosFiap.Web.Models" />
+        <add namespace="HtmlHelpers.BeginCollectionItem" />
+        <add namespace="SistemaChamadosFiap.Data.Enumerations" />
+        <add namespace="System.Security.Claims" />
+        <add namespace="SistemaChamadosFiap.Web.Infrastructure.Extensions" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
@@ -28,7 +33,7 @@
 
   <system.webServer>
     <handlers>
-      <remove name="BlockViewHandler"/>
+      <remove name="BlockViewHandler" />
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
   </system.webServer>
